--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,6 +8,7 @@
   <script src="vendors/jquery.min.js"></script>
   <script src="scripts/client.js"></script>
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <h1>YOUR GAME HERE!</h1>
