added input fields and a button, randomnumber

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,5 +12,10 @@
 </head>
 <body>
     <h1>YOUR GAME HERE!</h1>
+    <p>Ben:</p><input id="benInput" type="number">
+    <p>Nate:</p><input id="nateInput" type="number">
+    <p>Sarah:</p><input id="sarahInput" type="number">
+    <p>Johnathan:</p><input id="johnathanInput" type="number">
+    <button id="guessButton">Guess!</button>
 </body>
 </html>
