POST and GET operational

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <h1>YOUR GAME HERE!</h1>
-    <p>Ben:</p><input id="benInput" type="number">
-    <p>Nate:</p><input id="nateInput" type="number">
-    <p>Sarah:</p><input id="sarahInput" type="number">
-    <p>Johnathan:</p><input id="johnathanInput" type="number">
+    <p>Player 1:</p><input id="p1Input" type="number">
+    <p>Player 2:</p><input id="p2Input" type="number">
+    <p>Player 3:</p><input id="p3Input" type="number">
+    <p>Player 4:</p><input id="p4Input" type="number">
     <button id="guessButton">Guess!</button>
 </body>
 </html>
