total guesses indicator and guesses results in console log

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,10 +12,12 @@
 </head>
 <body>
     <h1>YOUR GAME HERE!</h1>
-    <p>Player 1:</p><input id="p1Input" type="number">
-    <p>Player 2:</p><input id="p2Input" type="number">
-    <p>Player 3:</p><input id="p3Input" type="number">
-    <p>Player 4:</p><input id="p4Input" type="number">
+    <label>Player 1:</label><input id="p1Input" type="number">
+    <label>Player 2:</label><input id="p2Input" type="number">
+    <label>Player 3:</label><input id="p3Input" type="number">
+    <label>Player 4:</label><input id="p4Input" type="number">
     <button id="guessButton">Guess!</button>
-</body>
-</html>
+    <div id="totalGuessArea"></div>
+    <div id="displayResults"></div>
+  </body>
+  </html>
