--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,7 +9,7 @@
   <script src="scripts/client.js"></script>
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-</head>
+</head>c
 <body>
     <h1>YOUR GAME HERE!</h1>
     <label>Player 1:</label><input id="p1Input" type="number">
@@ -17,6 +17,7 @@
     <label>Player 3:</label><input id="p3Input" type="number">
     <label>Player 4:</label><input id="p4Input" type="number">
     <button id="guessButton">Guess!</button>
+    <button id="resetButton">Reset</button>
     <div id="totalGuessArea"></div>
     <div id="displayResults"></div>
   </body>
