added duplicateCatcher, more styling

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,15 +11,17 @@
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <h1 id="title">YOUR GAME HERE!</h1>
+    <h1 id="title">I'm thinking of a number...</h1>
     <div id="gameInt">
-      <label>Player 1:</label><input id="p1Input" type="number">
-      <label>Player 2:</label><input id="p2Input" type="number">
-      <label>Player 3:</label><input id="p3Input" type="number">
-      <label>Player 4:</label><input id="p4Input" type="number">
+      <div class="players">
+        <label>Player 1:</label><input id="p1Input" type="number">
+        <label>Player 2:</label><input id="p2Input" type="number">
+        <label>Player 3:</label><input id="p3Input" type="number">
+        <label>Player 4:</label><input id="p4Input" type="number">
+      </div>  
       <div>
-      <button id="guessButton">Guess!</button>
-      <button id="resetButton">Reset</button>
+        <button id="guessButton">Guess!</button>
+        <button id="resetButton">Reset</button>
       </div>
       <div id="totalGuessArea"></div>
       <div id="displayResults"></div>
